Migrate to kotlin.time